used websocket on for uni/bi-directional streaming for the ui

--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -17,6 +17,13 @@
   </h1>
 </header>
 <main class="container">
+  <section class="my-4">
+    <div class="card p-3 shadow-sm">
+      <h5>Debug Console</h5>
+      <div id="debug-console" style="max-height: 200px; overflow-y: auto; background: #f1f1f1; padding: 0.5rem; font-family: monospace; font-size: 0.9rem;"></div>
+    </div>
+  </section>
+
   <div class="row g-4 mb-4">
     <div class="col-lg-4">
       <div class="card p-3 shadow-sm">
